# Python-Conventions

./: .flake8  README.md  noxfile.py  pyproject.toml
src/python_conventions/: classModule.py  main.py
src/python_conventions/another_module/: module2.py
src/python_conventions/math_module/: module1.py
